# vn-game

./: .clang-format  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  compiler.lua  game.cfg
assets/scripts/: test.crka
engine/: CMakeLists.txt
scripts/: public-env.sh
src/: CMakeLists.txt  main.cpp  main.hpp
